# nure_cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs  schedule.rs  search.rs  utils.rs
