[package]
name = "nure_cli"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "CLI for nure_tools"
homepage = "https://github.com/SoappGuy/nure_cli"
repository = "https://github.com/SoappGuy/nure_cli"
readme = "README.md"
exclude = [
    ".vscode/"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
dateparser = "0.2.1"
nure_tools = "1.1.3"
runtime-format = "0.1.3"
