[package]
name = "nure_cli"
version = "0.6.0"
edition = "2021"
license-file = "LICENSE"
description = "CLI for nure_tools"
homepage = "https://github.com/SoappGuy/nure_cli"
repository = "https://github.com/SoappGuy/nure_cli"
readme = "README.md"
exclude = [
    ".vscode/"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "unicode", "suggestions"] }
dateparser = "0.2.1"
dialoguer = "0.11.0"
nure_tools = "1.2.4"
runtime-format = "0.1.3"
chrono-tz = "0.8.5"
